--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
@@ -9,7 +9,7 @@ template: false
 id: anmeldung_als_vereinsmitglied
 title: 'Anmeldung als Vereinsmitglied'
 description: ''
-elements: "vorname:\n  '#type': textfield\n  '#title': Vorname\nnachname:\n  '#type': textfield\n  '#title': Nachname\ngeburtsdatum:\n  '#type': date\n  '#title': Geburtsdatum\n  '#date_date_format': d.m.Y\n"
+elements: "vorname:\n  '#type': textfield\n  '#title': Vorname\nnachname:\n  '#type': textfield\n  '#title': Nachname\nbirthday:\n  '#type': datetime\n  '#title': Geburtsdatum\n  '#date_date_format': d.m.Y\n  '#date_time_element': none\n  '#date_increment': ''\ncountry_origin:\n  '#type': textfield\n  '#title': Nationalität\nchildren_parent:\n  '#type': fieldset\n  '#title': 'Bei Kindern: Name des Erziehungsberechtigten'\n  parent_first_name:\n    '#type': textfield\n    '#title': Vorname\n  parent_last_name:\n    '#type': textfield\n    '#title': Nachname\nadress:\n  '#type': fieldset\n  '#title': Adresse\n  street_nr:\n    '#type': textfield\n    '#title': 'Straße / Hausnr.'\n  area_code:\n    '#type': textfield\n    '#title': PLZ\n  city:\n    '#type': textfield\n    '#title': Ort\n  telephone:\n    '#type': textfield\n    '#title': Telefonnummer\n  email:\n    '#type': email\n    '#title': E-Mail-Adresse\n    '#required': true\n    '#required_error': 'Bitte geben Sie Ihre E-Mailadresse ein.'\npayment_data:\n  '#type': fieldset\n  '#title': Kontodaten\n"
 css: ''
 javascript: ''
 settings:
