Tabellen aktiviert in Simple HTML

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/editor.editor.basic_html.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/editor.editor.basic_html.yml
@@ -42,6 +42,7 @@ settings:
           name: Tools
           items:
             - Source
+            - Table
   plugins:
     drupallink:
       linkit_enabled: true
