--- a/modules/contrib/entity_embed/entity_embed.info.yml
+++ b/modules/contrib/entity_embed/entity_embed.info.yml
@@ -10,8 +10,8 @@ dependencies:
 test_dependencies:
   - entity_browser:entity_browser
 
-# Information added by Drupal.org packaging script on 2016-10-17
-version: '8.x-1.0-beta2'
+# Information added by Drupal.org packaging script on 2017-03-29
+version: '8.x-1.0-beta2+2-dev'
 core: '8.x'
 project: 'entity_embed'
-datestamp: 1476698379
+datestamp: 1490756887
