--- a/modules/contrib/entity_embed/tests/modules/entity_embed_test/entity_embed_test.info.yml
+++ b/modules/contrib/entity_embed/tests/modules/entity_embed_test/entity_embed_test.info.yml
@@ -5,8 +5,8 @@ description: 'Support module for the Entity Embed module tests.'
 package: Testing
 # version: VERSION
 
-# Information added by Drupal.org packaging script on 2016-10-17
-version: '8.x-1.0-beta2'
+# Information added by Drupal.org packaging script on 2017-03-29
+version: '8.x-1.0-beta2+2-dev'
 core: '8.x'
 project: 'entity_embed'
-datestamp: 1476698379
+datestamp: 1490756887
