--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/block.block.views_block__news_block_1.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/block.block.views_block__news_block_1.yml
@@ -21,7 +21,7 @@ settings:
   provider: views
   label_display: visible
   views_label: ''
-  items_per_page: '5'
+  items_per_page: none
 visibility:
   request_path:
     id: request_path
