Rechte für Chefredakteur, Webform Submissions anzugucken

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
@@ -25,3 +25,6 @@ permissions:
   - 'bypass node access'
   - 'entityconnect add button'
   - 'entityconnect edit button'
+  - 'access webform overview'
+  - 'administer webform submission'
+  - 'view any webform submission'
