Entity Embed in Textformaten aktiviert

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/editor.editor.basic_html.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/editor.editor.basic_html.yml
@@ -43,6 +43,10 @@ settings:
           items:
             - Source
             - Table
+        -
+          name: 'Entity Embed'
+          items:
+            - node
   plugins:
     drupallink:
       linkit_enabled: true
