--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/editor.editor.full_html.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/editor.editor.full_html.yml
@@ -50,6 +50,10 @@ settings:
           items:
             - ShowBlocks
             - Source
+        -
+          name: 'Entity Embed'
+          items:
+            - node
   plugins:
     drupallink:
       linkit_enabled: true
