Display Mode Entity Embed Felder editiert

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.player.entity_embed.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.player.entity_embed.yml
@@ -20,10 +20,11 @@ mode: entity_embed
 content:
   body:
     weight: 1
-    label: above
-    settings: {  }
+    label: visually_hidden
+    settings:
+      trim_length: 200
     third_party_settings: {  }
-    type: text_default
+    type: text_summary_or_trimmed
   field_player_image:
     weight: 0
     label: visually_hidden
