--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/filter.format.basic_html.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/filter.format.basic_html.yml
@@ -17,7 +17,7 @@ filters:
     id: filter_html
     provider: filter
     status: true
-    weight: -10
+    weight: -49
     settings:
       allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <button class=""> <h2 id class=""> <h3 id class=""> <h4 id class=""> <h5 id class=""> <h6 id> <p class=""> <br> <span class=""> <img src alt data-entity-type data-entity-uuid data-align data-caption height width> <a href hreflang data-entity-type data-entity-uuid title class=""> <table> <caption> <tbody> <thead> <tfoot> <th> <td> <tr><drupal-entity data-entity-type data-entity-uuid data-view-mode data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button>'
       filter_html_help: false
@@ -26,38 +26,38 @@ filters:
     id: filter_align
     provider: filter
     status: true
-    weight: 7
+    weight: -44
     settings: {  }
   filter_caption:
     id: filter_caption
     provider: filter
     status: true
-    weight: 8
+    weight: -43
     settings: {  }
   filter_html_image_secure:
     id: filter_html_image_secure
     provider: filter
-    status: true
-    weight: 9
+    status: false
+    weight: -45
     settings: {  }
   editor_file_reference:
     id: editor_file_reference
     provider: editor
     status: true
-    weight: 11
+    weight: -42
     settings: {  }
   linkit:
     id: linkit
     provider: linkit
     status: true
-    weight: -15
+    weight: -50
     settings:
       title: true
   filter_spamspan:
     id: filter_spamspan
     provider: spamspan
     status: true
-    weight: 0
+    weight: -46
     settings:
       spamspan_at: ' [at] '
       spamspan_use_graphic: '1'
@@ -71,12 +71,30 @@ filters:
     id: entity_embed
     provider: entity_embed
     status: true
-    weight: 0
+    weight: -48
     settings: {  }
   filter_url:
     id: filter_url
     provider: filter
     status: true
-    weight: 0
+    weight: -47
     settings:
       filter_url_length: 72
+  filter_autop:
+    id: filter_autop
+    provider: filter
+    status: false
+    weight: -40
+    settings: {  }
+  filter_htmlcorrector:
+    id: filter_htmlcorrector
+    provider: filter
+    status: false
+    weight: -39
+    settings: {  }
+  filter_html_escape:
+    id: filter_html_escape
+    provider: filter
+    status: false
+    weight: -41
+    settings: {  }
