Kontaktformular Übersetzung und Empfänger

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/contact.form.feedback.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/contact.form.feedback.yml
@@ -8,7 +8,8 @@ id: feedback
 label: Kontakt
 recipients:
   - info@rufzeichen-online.de
+  - hayen@schachklub-hannover.de
 reply: ''
 weight: 0
-message: 'Your message has been sent.'
+message: 'Ihre Nachricht wurde gesendet.'
 redirect: ''
