--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.player.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.player.default.yml
@@ -19,13 +19,13 @@ bundle: player
 mode: default
 content:
   body:
-    weight: 1
-    label: above
+    weight: 2
+    label: visually_hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
   field_function_club:
-    weight: 2
+    weight: 1
     label: above
     settings:
       link_to_entity: false
