Bilder in Bildergalerie auf Vollbild verlinkt

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.field_collection_item.field_gallery_images.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.field_collection_item.field_gallery_images.default.yml
@@ -19,16 +19,9 @@ content:
     label: visually_hidden
     settings:
       image_style: image_gallery_thumb
-      image_link: ''
+      image_link: file
     third_party_settings: {  }
     type: image
     region: content
-  field_gallery_image_caption:
-    weight: 1
-    label: visually_hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-hidden: {  }
+hidden:
+  field_gallery_image_caption: true
